# opnsense-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: test_vip_list.py
src/opnsense/: client.py  exceptions.py  opncli.py
src/opnsense/firewall/: __init__.py  alias.py  category.py  d_nat.py  filter.py  group.py  npt.py  source_nat.py
src/opnsense/interfaces/: __init__.py  bridge_settings.py  gif_settings.py  gre_settings.py  lagg_settings.py  loopback_settings.py  neighbor_settings.py  overview.py  settings.py  vip_settings.py  vlan_settings.py  vxlan_settings.py
src/opnsense/interfaces/vip_settings/: __init__.py
src/opnsense/utils/category/: __init__.py
src/opnsense/utils/rule/: __init__.py
src/opnsense/utils/vip/: __init__.py
tests/: conftest.py  test_firewall.py  test_interfaces.py  test_virtual_ip.py  test_virtual_ip_add_delete.py  test_virtual_ip_cleanup.py  test_virtual_ip_from_yaml.py  test_virtual_ip_random_assign.py  utils.py
tests/data/: virtual_ips.yml
