[tool.poetry]
name = "opnsense-python"
version = "0.0.1"
description = ""
authors = [ "Kojiro ONO <ono.kojiro@gmail.com>" ]
readme = "README.md"

packages = [{include = "opnsense", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.14"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
